# asm2cfg

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  asm2cfg  asm2cfg.py  huge.asm  setup.cfg  stripped_function.asm  test.asm
.github/workflows/: ci.yml  codeql.yml
LICENSES/: GTDGmbH.md  MauriMustonen.md
doc/: 1_Installation.md  2_HowToRun.md  3_Development.md  4_Github.md
examples/: arm.asm  att_syntax.asm  dataframe.csv  objdump.asm  riscv-huge.asm  stripped_objdump.asm
ocgraph/: __main__.py
ocgraph/configuration/: configuration.py  logger.py
ocgraph/configuration/architecture/: architecture.py  arm.py  ppc.py  sparc.py  x86.py
ocgraph/configuration/disassembler/: disassembler.py  gdb_default.py  objdump_arm.py  objdump_default.py  objdump_ppc.py  objdump_sparc.py  objdump_x86.py
ocgraph/data/: address.py  basic_block.py  encoding.py  instruction.py  jump_table.py
ocgraph/interface/: analyzer.py  coverage_reader.py  drawer.py
ocrecord/: gdb_asm2cfg.py
scripts/: batch_objdump.sh  install-deps.sh  update_examples.sh
src/: gdb_asm2cfg.py
src/asm2cfg/: __main__.py  asm2cfg.py  command_line.py  utils.py
test/: test_gdb.py  test_parser.py  test_regex.py
test/examples/: arm.asm  att_syntax.asm  huge.asm  objdump.asm  stripped_objdump.asm  test_function.asm
test/fixtures/simple_program/: hello  hello.c
test/templates/: call.c  common.py  funtable.c  gen_calls.py  gen_funtable.py  gen_jumps.py  gen_jumptable.py  jump.c  jumptable.c
