[metadata]
name = asm2cfg
version = 0.2.0
author = Mauri Mustonen
author_email = kazooiebombchu@gmail.com
description = GDB extension to add commands to view and save disassembled functions as a dot control-flow graphs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kazhuu/asm2cfg
project_urls =
    Bug Tracker = https://github.com/Kazhuu/asm2cfg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    graphviz >= 0.16
scripts = src/gdb_asm2cfg.py

[options.entry_points]
console_scripts =
    asm2cfg = asm2cfg.command_line:main

[options.packages.find]
where = src

[flake8]
max-line-length = 120
exclude = build

[pylint.]
max-line-length = 120
check-quote-consistency = yes
logging-format-style = new
expected-line-ending-format = LF
include-naming-hint = yes
ignored-modules = gdb # Ignore because of the GDB integration
notes= # disable warnings for TODO, FIXME etc.
disable=bad-option-value,missing-function-docstring,no-self-use,too-many-instance-attributes,too-many-arguments,too-many-locals,too-many-branches,too-many-statements
